<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Game Center</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_login">Sign in</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_birthday">Date of birth</string>
    <string name="hint_country">Country</string>
    <string name="hint_nickname">Nickname</string>
    <string name="RegisterText">If you don\'t have an account, register here.</string>
    <string name="button_register">Sign up</string>
    <string name="GenderMale">Male</string>
    <string name="GenderFemale">Female</string>
    <string name="GenderField">Gender</string>
    <string name="btn_signup">Sign Up</string>
    <string name="hint_confirm_password">Password confirmation</string>
    <string name="txt_country">Country</string>

</resources>
